2005-07-04  Kazu Hirata  <kazu@codesourcery.com>

	* gcc.dg/compare1.c: Skip on arm*-*-eabi* arm*-*-symbianelf*.
	* gcc.dg/compare9.c: New.

2005-07-04  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	* gfortran.dg/io_invalid_1.f90: Fix expected error message.

2005-07-03  Andrew Pinski  <pinskia@physics.uc.edu>

	PR testsuite/22288
	* gcc.dg/tree-ssa/pr14490-[1-4].c: Escape "+".


2005-07-03  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.dg/format/gcc_gfc-1.c: New.

2005-07-03  Andrew Pinski  <pinskia@physics.uc.edu>

	* pr14490-[1-4].c: Fix typos scan-tree-dump-times so they now pass.

2005-07-03  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR fortran/20842
	* gfortran.dg/io_invalid_1.f90: New test.

2005-07-03  Joseph S. Myers  <joseph@codesourcery.com>

	* gcc.dg/format/gcc_diag-1.c: Update.

2005-07-02  Jeff Law  <law@redhat.com>

	* gcc.dg/tree-ssa/pr22051-1.c: New test.
	* gcc.dg/tree-ssa/pr22051-2.c: New test.

2005-07-02  Joseph S. Myers  <joseph@codesourcery.com>

	* gcc.dg/format/gcc_diag-1.c: Update.

2005-07-01  Andrew Pinski  <pinskia@physics.uc.edu>

	PR tree-opt/22269
	* gcc.c-torture/compile/pr22269.c: New test.

2005-06-30  Diego Novillo  <dnovillo@redhat.com>

	PR 21584
	PR 22219
	* g++.dg/tree-ssa/pr21584-1.C: New test.
	* g++.dg/tree-ssa/pr21584-2.C: New test.

2005-06-30  Ziemowit Laski  <zlaski@apple.com>

	* obj-c++.dg/try-catch-11.mm: New.
	* objc.dg/try-catch-10.m: New.

2005-06-29  David Edelsohn  <edelsohn@gnu.org>

	* g++.dg/other/ucnid-1.C: xfail on AIX.

2005-06-29  Diego Novillo  <dnovillo@redhat.com>

	PR 22234
	* gcc.dg/20050629-1.c: New test.

2005-06-29  Ziemowit Laski  <zlaski@apple.com>

	* obj-c++.dg/const-str-1[0-1].mm: New.
	* objc.dg/const-str-1[0-1].m: New.

2005-05-29  Richard Henderson  <rth@redhat.com>

	* lib/target-supports.exp (check_effective_target_vect_no_int_max):
	Rename from check_effective_target_vect_no_max.
	(check_effective_target_vect_no_int_add): New.